<resources>
    <string name="app_name">PFIT ver 2</string>
    <string name="navigation_drawer_close">Đóng ngăn điều hướng</string>
    <string name="navigation_drawer_open">Mở ngăn điều hướng</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_summary_subtitle">Summary of activities</string>
    <string name="steps">Steps</string>
    <string name="summary_card_kilocalories">kcal</string>
    <string name="pref_notification_message_value">Hey… Lets drink some water…</string>
    <string name="add_info_text">Please provide some information to customize the experience for you…!!</string>
    <string name="str_continue">Continue</string>
    <string name="enter_your_name_hint">Enter your name</string>
    <string name="age_hint">Enter your age</string>
    <string name="weight_hint">Cân nặng (kg)</string>
    <string name="v1_hint">Số đo vòng 1 (cm)</string>
    <string name="v2_hint">Số đo vòng 2 (cm)</string>
    <string name="v3_hint">Số đo vòng 3 (cm)</string>
    <string name="workout_hint">Chiều cao (cm)</string>
    <string name="hand_hint">Số đo vòng tay (cm)</string>
    <string name="femoral_hint">Số đo vòng đùi (cm)</string>
    <string name="tagline_text">Lets keep you hydrated…</string>
    <string name="get_started">Get Started</string>
    <string name="edit_info_text">Edit Your Info</string>
    <string name="update">Update</string>
    <string name="notif_setting_header">Đặt lời nhắc</string>
    <string name="notif_messsage_hint">Điền vào lời nhắc</string>
    <string name="notif_tone_hint">Notification Tone</string>
    <string name="notif_freq_hint">Notification Frequency</string>
    <string name="search">Tìm kiếm bài tập</string>
    <string name="font_bold">fonts/proximanova_bold.otf</string>
    <string name="font_light">fonts/proximanova_light.otf</string>
    <string name="year">Năm</string>
    <string name="month">Tháng</string>
    <string name="week">Ngày</string>

    <string name="activity_chart_summary_subtitle">SubTitle</string>
    <string name="action_v1">Vòng 1</string>
    <string name="action_v2">Vòng 2</string>
    <string name="action_v3">Vòng 3</string>
    <string name="action_hand">Vòng tay</string>
    <string name="action_femoral">Vòng đùi</string>
    <string name="action_weight">Cân nặng</string>
    <string name="action_height">Chiều cao</string>
    <string name="action_water">Lượng nước</string>

    <string name="pref_default_daily_step_goal" translatable="false">5000</string>
    <string name="pref_title_daily_step_goal">Personal daily step goal</string>
    <string name="pref_unit_of_length" translatable="false">com.crazytrends.healthmanager.WalkandStep.pref.unit_of_length</string>
    <string name="pref_title_unit_of_length">Unit of length</string>
    <string-array name="pref_keys_unit_of_length">
        <item>kilometers</item>
        <item>miles</item>
    </string-array>
    <string-array name="pref_values_unit_of_length" translatable="false">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string name="unit_of_length_km">1|km|kilometers|km/h|1000|m</string><!-- 1km = 1km -->
    <string name="unit_of_length_mi">0.621371|mi|miles|mph|5280|ft</string><!-- 1km = 0.621371 miles -->
    <string name="pref_unit_of_energy" translatable="false">com.crazytrends.healthmanager.WalkandStep.pref.unit_of_energy</string>
    <string name="pref_title_unit_of_energy">Unit of energy</string>
    <string-array name="pref_keys_unit_of_energy">
        <item>calories</item>
        <item>joules</item>
    </string-array>
    <string-array name="pref_values_unit_of_energy" translatable="false">
        <item>cal</item>
        <item>J</item>
    </string-array>
    <string name="joules">J</string>
    <string name="kilojoules">kJ</string>
    <string name="summary_card_calories">cal</string>
    <string name="correct_steps">Correct steps</string>
    <string name="correct_steps_dialog_title">Correct steps</string>
    <string name="correct_steps_dialog_message">Please provide a new number of steps you walked.</string>
    <string name="hint_steps">Number of steps</string>
    <string name="pause_step_detection">Pause step detection</string>
    <string name="continue_step_detection">Continue step detection</string>
    <string name="activity_summary_chart_legend_stepgoal">Stepgoal</string>

    <string name="pref_weight" translatable="false">com.crazytrends.healthmanager.WalkandStep.pref.weight</string>
    <string name="pref_title_weight">Weight (kg)</string>
    <string name="pref_default_weight" translatable="false">65.0</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="g_native">ca-app-pub-3940256099942544/2247696110</string>
    <string name="interstitial_key">ca-app-pub-3940256099942544/1033173712</string>

    <string name="email">Gmail</string>
    <string name="ds_khoatap">Danh sách khóa tập</string>


</resources>