<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color">

    <RelativeLayout
        android:id="@+id/rlrl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/r2r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/a1_grad">

            <Button
                android:id="@+id/btnUpdate"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_20"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:drawableEnd="@mipmap/done_22"
                android:text="THỂ TRẠNG HÔM NAY"
                android:textAlignment="textStart"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r2r2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="Cập nhật thể trạng của bạn hôm nay"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <EditText
        android:id="@+id/edtCN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="Cân nặng (kg)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlrl1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCN">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/workout_hint"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etHand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toStartOf="@+id/etFemoral"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHeight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/hand_hint"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:paddingStart="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFemoral"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etHand"
        app:layout_constraintTop_toBottomOf="@+id/etHeight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/femoral_hint"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvNoti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/notif_setting_header"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etV3"
        tools:text="Thông báo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etV1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHand">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/v1_hint"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etV2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etV1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/v2_hint"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etV3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etV2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/v3_hint"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>